<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hotmail.oswaldosaldivar.machorro.MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/escrol"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="#c4c1c1">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/lineal">


            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artista1"
                android:id="@+id/artista1"
                android:layout_marginTop="10dp"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artista2"
                android:id="@+id/artista2"
                android:layout_marginTop="10dp"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artista3"
                android:id="@+id/artista3"
                android:layout_marginTop="10dp"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artista4"
                android:id="@+id/artista4"
                android:layout_marginTop="10dp"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artista5"
                android:id="@+id/artista5"
                android:layout_marginTop="10dp"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artista6"
                android:id="@+id/artista6"
                android:layout_marginTop="10dp"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artista7"
                android:id="@+id/artista7"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/salida"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:hint="@string/textosalida"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:textAlignment="center"
                />




        </LinearLayout>


    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
